[package]
name = "meta-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web ultra-rápido basado en Tokio
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

# Serialización y JSON
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Cliente HTTP. Usamos rustls-tls para evitar dependencias de OpenSSL en C (ideal para Docker scratch)
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }

# Criptografía
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4"
